[workspace]
members = [
  "orca",
  "orca-testkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Grayson Hieb"]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghieb/orca"
homepage = "https://github.com/ghieb/orca"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
dashmap = { version = "6.1" }
tokio-stream = { version = "0.1" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
tracing = { version = "0.1" }
mockall = { version = "0.13" }
parking_lot = { version = "0.12" }
