[package]
name = "orca-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orca = { path = "../orca" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"